added footnotes on the first four adhāras

--- a/bindu.bib
+++ b/bindu.bib
@@ -139,16 +139,44 @@ address={Lonavla},
   keywords={printsource},
 }
 
-@book{saradaavalon,
-  title={Śāradātilaka},
-  subtitle={Shāradātilakatantram: Part I.},
-  author={Avalon, Arthur},
-  year={1933},
-  publisher={Emerald Printing Works},
-  address={Calcutta},
+@book{bäumer2013,
+  title={Vijñānabhairava},
+  subtitle={Vijñāna Bhairava - Das göttliche Bewußtsein},
+  author={Bäumer, Bettina},
+  series={Taschenbuch 6}, 
+  year={2013},
+  publisher={Verlag der Weltreligionen im Insel Verlag},
+  address={Frankfurt am Main and Leipzig},
   keywords={printsource},
 }
 
+@book{bäumernetra,
+  title={The Yoga of the Netra Tantra},
+  subtitle={Third Eye and Overcoming Death},
+  author={Bäumer, Bettina},
+  editor={Srivatsa, Shivam}, 
+  year={2019},
+  publisher={Indian Institute of Advanced Study},
+  address={Shimla},
+  keywords={printsource},
+}
+
+@book{sarada,
+ title={Śāradātilakatantra},
+ note={see \citeauthor{saradatilakafull} 2011},
+ } 
+
+@article{saradatilakafull,
+  title={The Śāradātilakatantra on Yoga: A New Edition and Translation of Chapter 25}, 
+  editor={Bühnemann, Gudrun},
+  year={2011},
+  pages={205–35},
+  series={Bulletin of the School of Oriental Studies (SOAS)},
+  volume={75}, 
+  publisher={Cambridge University Press},
+  address={New York},
+  keywords={seclit},
+}
 
 @book{kathaup,
   title={Katha Upaniṣad},
@@ -170,7 +198,6 @@ address={Lonavla},
   keywords={seclit},
 }
 
-
 @book{siddharoma,
   title={Siddhāntaśiromaṇi},
   subtitle={Siddhāntaśiromaṇer Grahagaṇitasya Madhyamādhikārāntaḥ Vāsanābhāṣyavāsanā-
@@ -182,6 +209,16 @@ vārttikamarīcibhiḥ sahitaḥ},
   address={Benares},
   keywords={printsource},
 }
+
+@book{jyotsna,
+ title={Haṭhapradīpikājyotsnā},
+ subtitle={Haṭhayogapradīpikā of Svātmārāma with the Commentary Jyotsnā of Brahmānanda},
+ editor={Ayangar, Srinivasa},
+ year={1972},
+ publisher={Adyar Library and Research Centre},
+ address={Madras},
+ keywords={printsource},
+ }
 
 @book{kubji1988,
   title={Kubjikāmatatantra},
@@ -280,7 +317,8 @@ vārttikamarīcibhiḥ sahitaḥ},
 }
 
 @book{jogpradipyaka,
-  title={Jogpradīpyakā of Jayatarāma},
+  title={Jogpradīpyakā}, 
+  subtitle={Jogpradīpyakā of Jayatarāma},
   author={Maheśānanda, Swāmi and Sharma, Dr. B. R. and Sahay, Shri G. S. and Bodhe, Shri R. K.},
   year={2006},
   publisher={Kaivalyadhāma S. M. Y. M. Samiti},
@@ -884,7 +922,8 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
 
 
 @book{asiddhi,
-  title={The Amṛtasiddhi and Amṛtasiddhimūla - The Earliest Texts of the Haṭhayoga Tradition},
+  title={Amṛtasiddhi}, 
+  subtitle={The Amṛtasiddhi and Amṛtasiddhimūla - The Earliest Texts of the Haṭhayoga Tradition},
   editor={Mallinson, James and Szántó, Péter-Dániel},
   year={2021},
   publisher={École française d’Extrême-Orient},
@@ -1134,6 +1173,15 @@ address={Pondicherry},
    keywords={codex},
 }
 
+@codex{gsatacod,
+   title={Gorakṣaśataka},  
+   author={Gorakṣa},
+   address={Government Oriental Manuscripts Library, Madras},
+   note={manuscript no. R 7874},
+   keywords={codex},
+}
+
+
 @Misc{msbmt,
   note={Brahmayāmalatantra: \cite{codexbmt}},
   shorthand={BMT},
@@ -1174,6 +1222,25 @@ address={Pondicherry},
   year={2015},
   publisher={Motilal Banarsidass},
   address={Delhi},
+  keywords={printsource},
+}
+
+@book{gorakbhani,
+  title={Gorakhbhāṇī},
+  editor={Baḍathvāl, P.D.},
+  year={1960},
+  publisher={Hindī Sāhity Sammelan},
+  address={Prayāg},
+  keywords={printsource},
+}
+
+@book{hathatattvakaumudi,
+  title={Haṭhatattvakaumudī},
+  subtitle={Haṭhatattvakaumudī: A Treatise on Haṭhayoga by Sundaradeva},
+  editor={Gharote, M.L. and Devnath, P. and Jha, V.J.},
+  year={2007},
+  publisher={The Lonavla Yoga Institute},
+  address={Lonavla},
   keywords={printsource},
 }
 
@@ -1610,14 +1677,15 @@ address={Delhi},
 }
 
 @book{netratantra,
-   title={Netratantra},
-   year={1926},
+   title={Netratantra with Netroddyota},
+   subtitle={Netratantra with the commentary (Netroddyota) of Rājānaka Kṣemarāja}, 
+   year={1926 and 1939},
    editor={Śāstri, Madhusūdan Kaul},
-   author={Kṣemarāja},
-   series={Kashmir Series of Texts and Studies 46},
-   address={Srinagar},
+   series={Kashmir Series of Texts and Studies 46, 59},
+   address={Srinagar, Bombay},
    keywords={printsource},
 }
+
 
 @book{tantraloka,
    title={Tantrāloka},
