--- a/bindu.bib
+++ b/bindu.bib
@@ -29,6 +29,17 @@
   keywords={seclit},
 }
 
+@book{tantrika3,
+  title={Tāntrikābhidhānakośa 3}, 
+  subtitle={Dictionnaire des termes techniques de la littérature hindoue tantrique - A Dictionary of Technical Terms from Hindu Tantric Literature - Wörterbuch zur Terminologie hinduistischer Tantren}, 
+  author={Rastelli, Marion and Goodall Dominic},
+  series={Beiträge zur Kultur- und Geistesgeschichte Asiens; 76}, 
+  volume={3: Ṭ-Ph},
+  year={2013},
+  publisher={Verlag der Österreichischen Akademie der Wissenschaften},
+  address={Wien},
+  keywords={seclit},
+ }
 
 @book{hauschild1927,
   title={Śvetāśvatara Upaniṣad},
@@ -57,7 +68,7 @@
   year={2009},
   note={13 vols},
   publisher={IGNCA and D.K. Printworld},
-  address={New Delhi},
+  address={Delhi},
   keywords={printsource},
 }
 
@@ -281,10 +292,20 @@ vārttikamarīcibhiḥ sahitaḥ},
 
 @book{yogasutra,
   title={Yoga Philosophy of Patañjali},
-  editor={Āraṇya, Hariharānanda},
+  editor={Hariharānanda Āraṇya},
   year={1983},
   publisher={State University of New York Press},
   keywords={printsource},
+}
+
+@book{bhagavata,
+title={Bhāgavata Purāṇa},
+editor={Shastri, J.L. and Tagara, G.V.},
+volume={1-5},
+year={1950},
+publisher={Motilal Banarsidass},
+address={New Delhi},
+keywords={printsource},
 }
 
 @book{yogacandrika,
@@ -432,7 +453,16 @@ publisher={North Point Press},
 address={New York},
 keywords={printsource},
 }
-  
+
+@book{aranya,
+title={Pātañjalayogaśāstra},
+subtitle={Yoga Philosophy of Patañjali. Containing his yoga aphorisms with Vyāsa's commentary in Sanskrit and a translation with annotations including many suggestions for the practice of yoga},
+editor={Āraṇya, Swāmi Hariharānanda},
+year={1983},
+publisher={State University Press of New York},
+address={Albany},
+keywords={printsource},
+}
 
 @book{sensharma2007,
   title={Aspects of Tantra Yoga},
@@ -463,6 +493,19 @@ Sound},
   pages={97-117},
   publisher={Princeton University Press},
   address={New Jersey},
+  keywords={seclit},
+}
+
+
+@article{white2021,
+  booktitle={Merton and Hinduism: The Yoga of the Heart},
+  title={Yoga, The One and the Many}, 
+  author={White, David Gordon},
+  editor={Odorisio, David M.},
+  year={2021},
+  pages={10-39},
+  publisher={Fons Vitae},
+  address={Louisville, KY},
   keywords={seclit},
 }
 
@@ -531,7 +574,7 @@ Sound},
 }
 
 @book{urban2010,
-  title={The Power of Tantra: Religion, Sexuality and the Politics of South Asian Studies},
+  title={The Power of Tantra: Religion, Sexuality and the Politics of South Aasian Studies},
   author= {Urban, Hugh B.},
   year={2010},
   publisher={I.B. Tauris and Co. Ltd.},
@@ -547,7 +590,18 @@ Sound},
   address={Dehli},
   keywords={seclit},
 }
-  
+
+@book{rigveda,
+  title={Ṛgveda},
+  subtitle={Der Rig-Veda}, 
+  author={Geldner, Karl Friedrich},
+  year={1951},
+  volume={1},
+  publisher={Harvard University Press},
+  address={Cambridge},
+  keywords={printed},
+}
+
 @book{sircar1966,
   title={Indian Epigraphical Glossary},
   author={Sircar, D.C.},
@@ -568,6 +622,17 @@ Sound},
   keywords={seclit},
 }
 
+@article{white2011,
+ title={On the Magnitude of the Yogic Body},
+ editor={Munoz, Adrian and Lorenzen, David N.},
+ booktitle={Yogi Heroes and Poets: Histories and Legends of the Nāths},
+ year={2011},
+ pages={79-90},
+ publisher={SUNY Press},
+ address={Albany, NY},
+ keywords={seclit},
+ }
+ 
 @book{kawamura1991,
    title={Madhyāmika and Yogācāra: A Study of Mahāyana Philosophies},
    author={Kawamura, L. S.},
@@ -690,7 +755,7 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
    keywords={seclit},
 }
    
-@inbook{mallinson2020as,
+@article{mallinson2020as,
    title={The Aṃrtasiddhi: Haṭhayoga’s Tantric Buddhist Source Text},
    author={Mallinson, James},
    editor={Goodall,Dominic and Hatley, Shaman and Isaacson, Harunaga and Raman, Srilata},
@@ -725,7 +790,17 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
    keywords={seclit},
 }
 
-
+@article{haag2012,
+ author={Haag, James W.},
+ title={Hindu Cosmogony/Cosmology},
+ editor={Larson, Gerald James},
+ chapter={11},
+ series={The Routledge Companion to Religion and Science},
+ year={2011},
+ publisher={Routledge},
+ address={New York},
+ }
+ 
 @book{apte1957,
    title={Sanskrit-English Dictionary},
    author={Apte, V. S.},
@@ -818,6 +893,16 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
   year={2008},
   publisher={China Tibetology Publishing House, Austrian Academy of Sciences Press},
   address={Beijing - Vienna},
+  keywords={printsource},
+}
+
+@book{mallinson2010,
+  title={Khecarīvidyā},
+  subtitle={The Khecarīvidyā of Ādinātha - A critical edition and annotated translation of an early text of \textit{haṭhayoga}}, 
+  editor= {Mallinson, James},
+  year={2010},
+  publisher={Indica Books},
+  address={Varanasi},
   keywords={printsource},
 }
 
@@ -920,6 +1005,16 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
   keywords={critEd},
 }
 
+@book{vayupurana,
+title={Vāyu Purāṇa},
+subtitle={The Vāyu Purāṇa},
+editor={Tagare, Ganesh Vasudeo},
+year={1988},
+publisher={Motilal Banarsidass},
+address={Delhi},
+keywords={printsource},
+} 
+
 
 @book{asiddhi,
   title={Amṛtasiddhi}, 
@@ -938,7 +1033,32 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
  year={2017},
  publisher={Penguin Books},
  address={UK},
+ keywords={seclit},  
  }
+
+@book{markandeya,
+title={Mārkaṇḍeya Purāṇa}, 
+subtitle={The Mārkaṇḍeya Purāṇa},
+year={1904},
+editor={Pargiter, Frederik Eden},
+publisher={Asiatic Society of Bengal},
+address={Calcutta} ,
+keywords={printsource},
+}
+
+
+@book{parakhya,
+title={Parākhyatantra},
+subtitle={The Parādhyatantra: A Scripture of the Śaiva Siddhānta. A Critical Edition and Annotated Translation},
+author={Goodall, Dominic},
+year={2004},
+series={Collection Indologie},
+volume={98},
+publisher={École française d’Extrême-Orient, Institut Français de Pondichéry},
+address={Pondicherry},
+keywords={printsource},
+}
+
 
 @Misc{aswork,
    note={Amṛtasiddhi: \cite{asiddhi}},
@@ -1638,6 +1758,7 @@ address={Delhi},
 }
 
 
+
 @book{hevajra,
    title={Hevajratantra},
    editor={Snellgroove, David L.},
@@ -1658,7 +1779,7 @@ address={Delhi},
   }
 
 @book{bhagavata,
-   title={Bhāgavatapurāṇa},
+   title={Bhāgavata Purāṇa},
    editor={Śarman, Vasudeva},
    year={1905},
    publisher={Nirnaya Sagar},
