--- a/preamble.tex
+++ b/preamble.tex
@@ -53,6 +53,7 @@
 %%% more functionality
 \PassOptionsToPackage{hyphens}{url}
 \usepackage{hyperref}
+\usepackage{pdflscape}
 \usepackage{cleveref}
 \usepackage{url}
 \usepackage{cleveref}
