--- a/bindu.bib
+++ b/bindu.bib
@@ -172,6 +172,15 @@ address={Lonavla},
   keywords={printsource},
 }
 
+@book{saradaavalon,
+   title={Śāradātilakatantra}, 
+   subtitle={Śārada-Tilaka-Tantra}, 
+editor={Avalon, Arthur}, 
+publisher={Motilal Banarsidass},
+year={1996},
+address={Delhi}, 
+}
+
 @book{sarada,
  title={Śāradātilakatantra},
  note={see \citeauthor{saradatilakafull} 2011},
@@ -202,7 +211,8 @@ address={Lonavla},
 }
 
 @book{shivapura,
-  title={Siva-Purana, Book 1: Vidyesvara-Samhita},
+  title={Śivapurāṇa}, 
+  subtitle={Siva-Purana, Book 1: Vidyesvara-Samhita},
   year={1920},
   publisher={Venkatesvara Steam Press},
   address={Bombay},
